core - partial